Add .env support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "google-api-python-client>=2.154.0",
+    "python-dotenv>=1.0.1",
     "youtube-transcript-api>=0.6.3",
 ]
